--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -1,7 +1,7 @@
 #Wed Jun 29 14:41:49 CEST 2011
-org.kalypso.ui.rrm.wizards.importPedologyData.ImportPedologyWizard.3=The parameter file (parameter.gml) is missing. Import impossible. 
-org.kalypso.ui.rrm.wizards.importPedologyData.ImportPedologyWizard.1=Pedology import error
-org.kalypso.ui.rrm.wizards.importPedologyData.ImportPedologyWizard.0=Pedology Import
+org.kalypso.ui.rrm.internal.hydrotops.ImportPedologyWizard.3=The parameter file (parameter.gml) is missing. Import impossible. 
+org.kalypso.ui.rrm.internal.hydrotops.ImportPedologyWizard.1=Pedology import error
+org.kalypso.ui.rrm.internal.hydrotops.ImportPedologyWizard.0=Pedology Import
 CalcCasesConverter_6=Other
 SetBasicModelDelegate.6=See Details\: 
 CalcCasesConverter_5=Failed to access calc case
@@ -66,17 +66,17 @@ RrmProjectConverter103to230_3=converting calc cases\u2026
 RrmProjectConverter103to230_2=converting basic data\u2026
 RrmProjectConverter103to230_1=Project '%s'
 RrmProjectConverter103to230_0=Converting project '%s' to version '%s'.
-org.kalypso.ui.rrm.internal.handler.RRMCreateHydrotopsHandler.8=Saving Hydrotopes...
-org.kalypso.ui.rrm.internal.handler.RRMCreateHydrotopsHandler.7=Hydrotope Intersection
-org.kalypso.ui.rrm.internal.handler.RRMCreateHydrotopsHandler.6=Creating Hydrotopes
-org.kalypso.ui.rrm.internal.handler.RRMCreateHydrotopsHandler.5=Create hydrotopes?\r\n\r\nWarning\: existing hydrotopes will be overwritten\!
-org.kalypso.ui.rrm.internal.handler.RRMCreateHydrotopsHandler.4=Kalypso
-org.kalypso.ui.rrm.internal.handler.RRMCreateHydrotopsHandler.3=At least one of necessary data collections is missing. Unable to create hydrotopes.
+org.kalypso.ui.rrm.internal.hydrotops.RRMCreateHydrotopsHandler.8=Saving Hydrotopes...
+org.kalypso.ui.rrm.internal.hydrotops.RRMCreateHydrotopsHandler.7=Hydrotope Intersection
+org.kalypso.ui.rrm.internal.hydrotops.RRMCreateHydrotopsHandler.6=Creating Hydrotopes
+org.kalypso.ui.rrm.internal.hydrotops.RRMCreateHydrotopsHandler.5=Create hydrotopes?\r\n\r\nWarning\: existing hydrotopes will be overwritten\!
+org.kalypso.ui.rrm.internal.hydrotops.RRMCreateHydrotopsHandler.4=Kalypso
+org.kalypso.ui.rrm.internal.hydrotops.RRMCreateHydrotopsHandler.3=At least one of necessary data collections is missing. Unable to create hydrotopes.
 org.kalypso.ogc.gml.map.widgets.editrelation.EditRelationWidget.25=Problem
-org.kalypso.ui.rrm.internal.handler.RRMCreateHydrotopsHandler.2=Theme '%s' contains no features. Hydrotopes cannot be created.
+org.kalypso.ui.rrm.internal.hydrotops.RRMCreateHydrotopsHandler.2=Theme '%s' contains no features. Hydrotopes cannot be created.
 org.kalypso.ogc.gml.map.widgets.editrelation.EditRelationWidget.24=Info
-org.kalypso.ui.rrm.internal.handler.RRMCreateHydrotopsHandler.1=Unknown data type found in theme '%s'. Hydrotopes cannot be created.
-org.kalypso.ui.rrm.internal.handler.RRMCreateHydrotopsHandler.0=Please select all the necessary data themes.
+org.kalypso.ui.rrm.internal.hydrotops.RRMCreateHydrotopsHandler.1=Unknown data type found in theme '%s'. Hydrotopes cannot be created.
+org.kalypso.ui.rrm.internal.hydrotops.RRMCreateHydrotopsHandler.0=Please select all the necessary data themes.
 org.kalypso.ogc.sensor.view.ObservationViewerDialog.7=Creates a new Vegetation-Cycle
 org.kalypso.ogc.sensor.view.ObservationViewerDialog.6=Create
 org.kalypso.ogc.sensor.view.ObservationViewerDialog.5=Idealized annual vegetation cycle
@@ -109,7 +109,7 @@ org.kalypso.ui.rrm.wizards.importGeologyData.ImportGeologyWizardPage.4=Input Sha
 org.kalypso.ui.rrm.wizards.importGeologyData.ImportGeologyWizardPage.3=Use this wizard to import geology data
 org.kalypso.ui.rrm.wizards.importGeologyData.ImportGeologyWizardPage.2=Geology Import Wizard
 org.kalypso.ui.rrm.wizards.importGeologyData.ImportGeologyWizardPage.0=Geology Import
-org.kalypso.ui.rrm.wizards.KalypsoNAProjectWizardPage.3=Unknown annotation type\:  
+org.kalypso.ui.rrm.internal.newproject.KalypsoNAProjectWizardPage.3=Unknown annotation type\:  
 org.kalypso.ogc.gml.map.widgets.editrelation.EditRelationOptionsLabelProvider.1=<unknown>
 TimeseriesExtendVisitor_0=Check timeseries length
 org.kalypso.ui.rrm.wizards.importLanduse.ImportLanduseWizardPage.15=Drainage type property
@@ -165,9 +165,9 @@ org.kalypso.ui.rrm.wizards.importLanduse.ImportLanduseWizardPage.6=Invalid sourc
 KalypsoNAProjectWizard.1=Location
 org.kalypso.ui.rrm.wizards.importLanduse.ImportLanduseWizardPage.4=Shape File
 org.kalypso.ui.rrm.wizards.importLanduse.ImportLanduseWizardPage.3=Please choose on this page which landuse data should be imported.
-org.kalypso.ui.rrm.internal.handler.RRMCreateHydrotopsHandler.12=Create Hydrotopes
-org.kalypso.ui.rrm.internal.handler.RRMCreateHydrotopsHandler.11=Failed to save hydrotopes
-org.kalypso.ui.rrm.internal.handler.RRMCreateHydrotopsHandler.10=Failed to save hydrotopes
+org.kalypso.ui.rrm.internal.hydrotops.RRMCreateHydrotopsHandler.12=Create Hydrotopes
+org.kalypso.ui.rrm.internal.hydrotops.RRMCreateHydrotopsHandler.11=Failed to save hydrotopes
+org.kalypso.ui.rrm.internal.hydrotops.RRMCreateHydrotopsHandler.10=Failed to save hydrotopes
 KalypsoNAProjectWizard_9=Unable to map value '%s' to property '%s' of type '%s'.
 KalypsoNAProjectWizardPage.SkipMessage=This page will be skipped
 KalypsoNAProjectWizard_7=Unknown channel type\: %d. Valid values are 0,1 or 2.
