--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -1,7 +1,7 @@
 #Wed Jun 29 14:41:49 CEST 2011
-org.kalypso.ui.rrm.wizards.importPedologyData.ImportPedologyWizard.3=Die Parameterdatei (parameter.gml) fehlt im Projekt. Import nicht m\u00F6glich.
-org.kalypso.ui.rrm.wizards.importPedologyData.ImportPedologyWizard.1=Fehler beim Pedologieimport
-org.kalypso.ui.rrm.wizards.importPedologyData.ImportPedologyWizard.0=Import Pedology
+org.kalypso.ui.rrm.internal.hydrotops.ImportPedologyWizard.3=Die Parameterdatei (parameter.gml) fehlt im Projekt. Import nicht m\u00F6glich.
+org.kalypso.ui.rrm.internal.hydrotops.ImportPedologyWizard.1=Fehler beim Pedologieimport
+org.kalypso.ui.rrm.internal.hydrotops.ImportPedologyWizard.0=Import Pedology
 CalcCasesConverter_6=Andere
 SetBasicModelDelegate.6=Siehe Details\: 
 CalcCasesConverter_5=Fehler beim Zugriff auf die Rechenvarianten
@@ -66,17 +66,17 @@ RrmProjectConverter103to230_3=konvertiere Rechenvarianten...
 RrmProjectConverter103to230_2=konvertiere Basisdaten...
 RrmProjectConverter103to230_1=Projekt '%s'
 RrmProjectConverter103to230_0=Konvertierung Projekt '%s' nach Version '%s'
-org.kalypso.ui.rrm.internal.handler.RRMCreateHydrotopsHandler.8=Speichere Hydrotope...
-org.kalypso.ui.rrm.internal.handler.RRMCreateHydrotopsHandler.7=Hydrotop-Schnittpunkte
-org.kalypso.ui.rrm.internal.handler.RRMCreateHydrotopsHandler.6=Erzeuge Hydrotope
-org.kalypso.ui.rrm.internal.handler.RRMCreateHydrotopsHandler.5=Hydrotope erzeugen ?\r\n\r\nWarnung\: bestehende Hydrotops werden \u00FCberschrieben\!
-org.kalypso.ui.rrm.internal.handler.RRMCreateHydrotopsHandler.4=Kalypso
-org.kalypso.ui.rrm.internal.handler.RRMCreateHydrotopsHandler.3=Mindestens ein notwendiges Datenthema fehlt. Hydrotope k\u00F6nnen nicht erstellt werden.
+org.kalypso.ui.rrm.internal.hydrotops.RRMCreateHydrotopsHandler.8=Speichere Hydrotope...
+org.kalypso.ui.rrm.internal.hydrotops.RRMCreateHydrotopsHandler.7=Hydrotop-Schnittpunkte
+org.kalypso.ui.rrm.internal.hydrotops.RRMCreateHydrotopsHandler.6=Erzeuge Hydrotope
+org.kalypso.ui.rrm.internal.hydrotops.RRMCreateHydrotopsHandler.5=Hydrotope erzeugen ?\r\n\r\nWarnung\: bestehende Hydrotops werden \u00FCberschrieben\!
+org.kalypso.ui.rrm.internal.hydrotops.RRMCreateHydrotopsHandler.4=Kalypso
+org.kalypso.ui.rrm.internal.hydrotops.RRMCreateHydrotopsHandler.3=Mindestens ein notwendiges Datenthema fehlt. Hydrotope k\u00F6nnen nicht erstellt werden.
 org.kalypso.ogc.gml.map.widgets.editrelation.EditRelationWidget.25=Problem
-org.kalypso.ui.rrm.internal.handler.RRMCreateHydrotopsHandler.2=Das Thema '%s' enth\u00E4lt keine Feature. Hydrotope k\u00F6nnen nicht erzeugt werden.
+org.kalypso.ui.rrm.internal.hydrotops.RRMCreateHydrotopsHandler.2=Das Thema '%s' enth\u00E4lt keine Feature. Hydrotope k\u00F6nnen nicht erzeugt werden.
 org.kalypso.ogc.gml.map.widgets.editrelation.EditRelationWidget.24=Info
-org.kalypso.ui.rrm.internal.handler.RRMCreateHydrotopsHandler.1=Das Thema '%s' enth\u00E4lt unbekannte Datentypen. Hydrotope k\u00F6nnen nicht erzeugt werden.
-org.kalypso.ui.rrm.internal.handler.RRMCreateHydrotopsHandler.0=Bitte w\u00E4hlen Sie die erforderlichen Themen.
+org.kalypso.ui.rrm.internal.hydrotops.RRMCreateHydrotopsHandler.1=Das Thema '%s' enth\u00E4lt unbekannte Datentypen. Hydrotope k\u00F6nnen nicht erzeugt werden.
+org.kalypso.ui.rrm.internal.hydrotops.RRMCreateHydrotopsHandler.0=Bitte w\u00E4hlen Sie die erforderlichen Themen.
 org.kalypso.ogc.sensor.view.ObservationViewerDialog.7=Neue Vegetationsperiode anlegen
 org.kalypso.ogc.sensor.view.ObservationViewerDialog.6=Neu
 org.kalypso.ogc.sensor.view.ObservationViewerDialog.5=Idealisierter Jahres Vegetationszyklus
@@ -109,7 +109,7 @@ org.kalypso.ui.rrm.wizards.importGeologyData.ImportGeologyWizardPage.4=Shapedate
 org.kalypso.ui.rrm.wizards.importGeologyData.ImportGeologyWizardPage.3=Benutzen Sie diesen Dialog um Geologiedaten zu importieren.
 org.kalypso.ui.rrm.wizards.importGeologyData.ImportGeologyWizardPage.2=Importwizard Geologie
 org.kalypso.ui.rrm.wizards.importGeologyData.ImportGeologyWizardPage.0=Import Geologie
-org.kalypso.ui.rrm.wizards.KalypsoNAProjectWizardPage.3=Unbekannter Annotation-Typ\:  
+org.kalypso.ui.rrm.internal.newproject.KalypsoNAProjectWizardPage.3=Unbekannter Annotation-Typ\:  
 org.kalypso.ogc.gml.map.widgets.editrelation.EditRelationOptionsLabelProvider.1=<unbekannt>
 TimeseriesExtendVisitor_0=Pr\u00FCfung der Zeitreihenl\u00E4nge
 org.kalypso.ui.rrm.wizards.importLanduse.ImportLanduseWizardPage.15=Entw\u00E4sserung
@@ -165,9 +165,9 @@ org.kalypso.ui.rrm.wizards.importLanduse.ImportLanduseWizardPage.6=Ung\u00FCltig
 KalypsoNAProjectWizard.1=Standort
 org.kalypso.ui.rrm.wizards.importLanduse.ImportLanduseWizardPage.4=Shapedatei
 org.kalypso.ui.rrm.wizards.importLanduse.ImportLanduseWizardPage.3=W\u00E4hlen Sie auf dieser Seite die Landnutzungsdaten, die importiert werden sollen.
-org.kalypso.ui.rrm.internal.handler.RRMCreateHydrotopsHandler.12=Erzeuge Hydrotope
-org.kalypso.ui.rrm.internal.handler.RRMCreateHydrotopsHandler.11=Hydrotope konnten nicht gespeichert werden
-org.kalypso.ui.rrm.internal.handler.RRMCreateHydrotopsHandler.10=Hydrotope konnten nicht gespeichert werden
+org.kalypso.ui.rrm.internal.hydrotops.RRMCreateHydrotopsHandler.12=Erzeuge Hydrotope
+org.kalypso.ui.rrm.internal.hydrotops.RRMCreateHydrotopsHandler.11=Hydrotope konnten nicht gespeichert werden
+org.kalypso.ui.rrm.internal.hydrotops.RRMCreateHydrotopsHandler.10=Hydrotope konnten nicht gespeichert werden
 KalypsoNAProjectWizard_9=Fehler bei der Zuordnung von Wert '%s' zur Eigenschaft '%s' von Typ '%s'.
 KalypsoNAProjectWizardPage.SkipMessage=Dieser Dialog wird \u00FCbersprungen.
 KalypsoNAProjectWizard_7=Unbekannter Strangtyp\: %d. G\u00FCltige Werte sind 0, 1, 2
