--- a/trunk/KalypsoModelWspmPdbCore/src/org/kalypso/model/wspm/pdb/internal/i18n/messages_de.properties
+++ b/trunk/KalypsoModelWspmPdbCore/src/org/kalypso/model/wspm/pdb/internal/i18n/messages_de.properties
@@ -102,9 +102,9 @@ PdbUpdater_4=Die Datenbankversion (%s) ist neuer als diese Version von Kalypso.\
 PdbUpdater_3=Die Datenbankversion (%s) ist \u00E4lter als die aktuelle Version (%s).
 PdbUpdater_2=Datenbank scheint leer zu sein
 PortValidator.3=Port muss eine Zahl sein.
-PdbUpdater_1=Verbindungsaufbau fehlgeschlagen\:PdbUpdater_0\=Verbindungsaufbau
+PdbUpdater_1=Verbindungsaufbau fehlgeschlagen\:\ 
+PdbUpdater_0=Verbindungsaufbau
 PortValidator.2=Port muss eine Zahl zwischen 1 und 9999 sein.
-PdbUpdater_0=\u00D6ffne Verbindung
 PortValidator.1=Default Port (%s) wird benutzt
 PortValidator.0=Ung\u00FCltiger Port
 PDBNameGenerator.0=Mehr als 999 profile mit gleicher Stationierung (%s). eindeutiger Profilname konnte nicht erzeugt werden.
@@ -161,4 +161,4 @@ EventConstants.0=Messung
 ReadGafOperation.0=Fehler beim Lesen einer Datei
 ImportGafData.0=Messung %s %d
 PdbSettings_1=Fehler beim Aufruf der Datenbankeinstellungen
-PdbSettings_0=Fhelende Einstellungen\: '%s'
+PdbSettings_0=Fehlende Einstellungen\: '%s'
