--- a/trunk/KalypsoModelWspmPdbUI/OSGI-INF/l10n/bundle_de.properties
+++ b/trunk/KalypsoModelWspmPdbUI/OSGI-INF/l10n/bundle_de.properties
@@ -14,7 +14,7 @@ category.name.2=Profildatenbank
 category.name.0=Profildatenbank Befehle (Karte)
 command.description=Strang als neuen Zustand in die Profildatenbank hochladen
 org.kalypso.model.wspm.pdb.ui.internal.wspm.LocalDataProjectExport.description=Den lokalen Arbeitsbereich als KalypsoWSPM Projekt exportieren
-command.name=Profilauswahl
+org.kalypso.ogc.gml.map.widgets.SelectWidgetCommand.SelectPdbProfiles.tooltip=Profilauswahl
 category.name.3=Profildatenbank Befehle
 wizard.name.0=Profildatenbank
 wizard.name.1=Gew\u00E4sserkundliches Austauschformat (GAF)
