--- a/trunk/KalypsoModelRisk/src/org/kalypso/risk/i18n/messages.properties
+++ b/trunk/KalypsoModelRisk/src/org/kalypso/risk/i18n/messages.properties
@@ -52,10 +52,10 @@ org.kalypso.risk.model.actions.manageWaterdepthCollections.FeatureNameLabelProvi
 org.kalypso.risk.model.actions.manageWaterdepthCollections.FeatureNameLabelProvider.3=\ [return period not specified]
 org.kalypso.risk.model.actions.manageWaterdepthCollections.WaterdepthCollectionsManagementWidget.0=Manage events
 org.kalypso.risk.model.actions.manageWaterdepthCollections.WaterdepthCollectionsManagementWidget.1=Manage events
-org.kalypso.risk.model.actions.manageWaterdepthCollections.WaterdepthCollectionsManagementWidget.11=New event
-org.kalypso.risk.model.actions.manageWaterdepthCollections.WaterdepthCollectionsManagementWidget.12=modify
+org.kalypso.risk.model.actions.manageWaterdepthCollections.WaterdepthCollectionsManagementWidget.11=New Event
+org.kalypso.risk.model.actions.manageWaterdepthCollections.WaterdepthCollectionsManagementWidget.12=Modify Event
 org.kalypso.risk.model.actions.manageWaterdepthCollections.WaterdepthCollectionsManagementWidget.13=Modification of the recurrence interval
-org.kalypso.risk.model.actions.manageWaterdepthCollections.WaterdepthCollectionsManagementWidget.14=remove
+org.kalypso.risk.model.actions.manageWaterdepthCollections.WaterdepthCollectionsManagementWidget.14=Remove Event
 org.kalypso.risk.model.actions.manageWaterdepthCollections.WaterdepthCollectionsManagementWidget.15=Event / water-level data delete
 org.kalypso.risk.model.actions.manageWaterdepthCollections.WaterdepthCollectionsManagementWidget.16=Push Up
 org.kalypso.risk.model.actions.manageWaterdepthCollections.WaterdepthCollectionsManagementWidget.17=Push Up
