--- a/trunk/KalypsoModelRisk/src/org/kalypso/risk/i18n/messages_de.properties
+++ b/trunk/KalypsoModelRisk/src/org/kalypso/risk/i18n/messages_de.properties
@@ -54,14 +54,14 @@ org.kalypso.risk.model.actions.manageWaterdepthCollections.FeatureNameLabelProvi
 org.kalypso.risk.model.actions.manageWaterdepthCollections.WaterdepthCollectionsManagementWidget.0=Ereignisse verwalten
 org.kalypso.risk.model.actions.manageWaterdepthCollections.WaterdepthCollectionsManagementWidget.1=Ereignisse verwalten
 org.kalypso.risk.model.actions.manageWaterdepthCollections.WaterdepthCollectionsManagementWidget.11=Neues Ereignis
-org.kalypso.risk.model.actions.manageWaterdepthCollections.WaterdepthCollectionsManagementWidget.12=\u00E4ndern
+org.kalypso.risk.model.actions.manageWaterdepthCollections.WaterdepthCollectionsManagementWidget.12=Ereignis \u00E4ndern
 org.kalypso.risk.model.actions.manageWaterdepthCollections.WaterdepthCollectionsManagementWidget.13=\u00C4nderung des Wiederkehrintervalls
-org.kalypso.risk.model.actions.manageWaterdepthCollections.WaterdepthCollectionsManagementWidget.14=entfernen
+org.kalypso.risk.model.actions.manageWaterdepthCollections.WaterdepthCollectionsManagementWidget.14=Ereignis entfernen
 org.kalypso.risk.model.actions.manageWaterdepthCollections.WaterdepthCollectionsManagementWidget.15=Ereignis / Wasserspiegeldatensatz löschen
-org.kalypso.risk.model.actions.manageWaterdepthCollections.WaterdepthCollectionsManagementWidget.16=nach oben schieben
-org.kalypso.risk.model.actions.manageWaterdepthCollections.WaterdepthCollectionsManagementWidget.17=nach oben schieben
-org.kalypso.risk.model.actions.manageWaterdepthCollections.WaterdepthCollectionsManagementWidget.18=nach unten schieben
-org.kalypso.risk.model.actions.manageWaterdepthCollections.WaterdepthCollectionsManagementWidget.19=nach unten schieben
+org.kalypso.risk.model.actions.manageWaterdepthCollections.WaterdepthCollectionsManagementWidget.16=Ereignis nach oben schieben
+org.kalypso.risk.model.actions.manageWaterdepthCollections.WaterdepthCollectionsManagementWidget.17=Ereignis nach oben schieben
+org.kalypso.risk.model.actions.manageWaterdepthCollections.WaterdepthCollectionsManagementWidget.18=Ereignis nach unten schieben
+org.kalypso.risk.model.actions.manageWaterdepthCollections.WaterdepthCollectionsManagementWidget.19=Ereignis nach unten schieben
 org.kalypso.risk.model.actions.manageWaterdepthCollections.WaterdepthCollectionsManagementWidget.2=Themen erzeugen
 org.kalypso.risk.model.actions.manageWaterdepthCollections.WaterdepthCollectionsManagementWidget.25=Wiederkehrintervall darf nicht leer sein
 org.kalypso.risk.model.actions.manageWaterdepthCollections.WaterdepthCollectionsManagementWidget.26=Wiederkehrintervall darf nicht kleiner oder gleich Null sein
