--- a/trunk/KalypsoModelNA/etc/schema/gml/parameter_de.properties
+++ b/trunk/KalypsoModelNA/etc/schema/gml/parameter_de.properties
@@ -53,7 +53,7 @@ rrmParam_SoilLayerParameter_rrmParam_xtief_tooltip=M\u00E4chtigkeit des Bodenhor
 rrmParam_SoilLayer_description=Ein Bodenhorizont ist Teil eines Bodenprofiles und wird von dort aus referenziert (verlinkt).
 rrmParam_SoilLayer_label=${listProperty\:http\://www.opengis.net/gml\#name;0}
 rrmParam_SoilLayer_rrmParam_typbf0_label=Anfangsbodenfeuchte
-rrmParam_SoilLayer_rrmParam_typbf0_tooltip=Anfangsbodenfeuchte [-]
+rrmParam_SoilLayer_rrmParam_typbf0_tooltip=Anfangsbodenfeuchte (0-1) [-]
 rrmParam_SoilLayer_rrmParam_typbfm_label=maximales Porenvolumen
 rrmParam_SoilLayer_rrmParam_typbfm_tooltip=maximales Porenvolumen [mm/dm]
 rrmParam_SoilLayer_rrmParam_typfk_label=Feldkapazit\u00E4t
