--- a/trunk/KalypsoUIRRM/plugin_de.properties
+++ b/trunk/KalypsoUIRRM/plugin_de.properties
@@ -20,17 +20,21 @@ org.kalypso.model.rrm.landuseDefinition.description=
 
 org.kalypso.model.rrm.modelConstruction.name=Modellaufbau
 org.kalypso.model.rrm.modelConstruction.description==Aufgaben zur grundsätzlichen Bearbeitung des Modellaufbaus
-org.kalypso.model.rrm.editNetElements.name=Netzelemente bearbeiten
+org.kalypso.model.rrm.editNetElements.name=Netzelemente
 org.kalypso.model.rrm.editNetElements.description=Elemente des Modellnetzes hinzufügen, bearbeiten oder löschen
-org.kalypso.model.rrm.editNetRelations.name=Netzverknüpfung bearbeiten
+org.kalypso.model.rrm.editNetRelations.name=Netzverknüpfung
 org.kalypso.model.rrm.editNetRelations.description=Die Verknüpfung zwischen Modellelementen bearbeiten
 org.kalypso.model.rrm.hydrotopes.name=Hydrotope
 org.kalypso.model.rrm.hydrotopes.description=Hydrotope
-org.kalypso.model.rrm.completeNetElements.name=Modellparameter vervollständigen
+org.kalypso.model.rrm.completeNetElements.name=Modellparameter
 org.kalypso.model.rrm.completeNetElements.description=Modellparameter vervollständigen
 
 org.kalypso.model.rrm.catchmentModels.name=Gebietsmodelle
 org.kalypso.model.rrm.catchmentModels.description=Gebietsmodelle
+
+org.kalypso.model.rrm.editCalibration.name=Kalibrierung
+org.kalypso.model.rrm.editCalibration.description=Kalibrierungsparameter bearbeiten
+
 org.kalypso.model.rrm.simulationManagement.name=Simulation
 org.kalypso.model.rrm.simulationManagement.description=Simulation
 simulationManagement=
