--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -37,7 +37,7 @@ IdwWizardLayoutPart_1=Timeseries used for Inverse Distance Weighting
 IdwWizardLayoutPart_2=Changing the parameter type needs to update the list of timeseries. Unsaved changes will be lost. Continue?
 IdwOptionsLayoutPart_0=Options used for Inverse Distance Weighting
 IdwOptionsLayoutPart_1=Number of stations
-IdwOptionsLayoutPart_2=The maximal number of stations to use.
+IdwOptionsLayoutPart_2=The maximal number of stations to use pro catchment.
 IdwOptionsLayoutPart_3=Maximal number of stations to use
 ThiessenWizardLayoutPart_0=General Properties
 ThiessenWizardLayoutPart_1=Timeseries used for Thiessen
@@ -347,7 +347,8 @@ NewCalcCaseAction_0=Update calc case
 NewHydrologicalStationAction_0=New Hydrological Station
 NewHydrologicalStationAction_1=Creates a new hydrologcial station
 NewLinearSumGeneratorAction_0=New Catchment Model (Linear Sum)
-NewLinearSumThiessenAction_0=New Catchment Model (Linear Sum) via Thiessen-Method
+NewLinearSumThiessenAction_0=New Catchment Model (Linear Sum) via Thiessen Method
+NewLinearSumIdwAction_0=New Catchment Model (Linear Sum) via Inverse Distance Weighting Method
 NewMeteorologicalStationAction_0=New Meteorological Station
 NewMeteorologicalStationAction_1=Creates a new meteorological station
 ObservationconfConverter_1=Skip empty link: %s
