--- a/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages_de.properties
+++ b/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages_de.properties
@@ -95,6 +95,7 @@ LzsimWriter.7=Fehler beim Schreiben der Anfangswerte f\u00FCr Strang '%s'
 org.kalypso.convert.namodel.manager.HydrotopManager.1=Landuse class '%s' referenced by hydrotop '%s' is not defined. Calculation aborted.
 org.kalypso.convert.namodel.manager.HydrotopManager.0=Der Landnutzungstyp '%s' existiert mehrfach. \u00DCberpr\u00FCfen Sie die Landnutzungstypen.
 LzsimWriter.5=F\u00FCr Teilgebiet %s wurden keine Anfangswerte gefunden. Bitte pr\u00FCfen Sie, ob der Unterwasserknoten dieses Teilgebiets berechnet wurde.  
+LzsimWriter.4=F\u00FCr Hydrotop mit GML-ID %s (Teilgebiet %s) wurden keine Anfangswerte gefunden. Bitte pr\u00FCfen Sie, ob der Unterwasserknoten dieses Teilgebiets berechnet wurde.  
 org.kalypso.convert.namodel.manager.LzsimManager.27=Es wurden keine Anfangswerte f\u00FCr Teilgebiet %s berechnet. Falls gew\u00FCnscht, aktivieren Sie bitte den Unterwasserknoten dieses Teilgebiets.
 LzsimWriter.3=Fehler beim Schreiben der Anfangswerte f\u00FCr Strang '%s'
 LzsimWriter.2=Kalypso-NA ASCII Anfangswerte konnten nicht geschrieben werden\: %s
