--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -286,12 +286,11 @@ KalypsoNAProjectWizard.CatchmentPageTitle=Import Sub-Catchments
 ChooseTimeseriesDialog_1=Search
 ChooseTimeseriesDialog_0=Choose Timeseries
 TextSearchFilterControl_0=Search string
-ChooseZmlLinkFeatureViewControl_6=Quality\: %s
-ChooseZmlLinkFeatureViewControl_5=Timestep\: %s,
+ChooseZmlLinkFeatureViewControl_6=%s
+ChooseZmlLinkFeatureViewControl_5=%s, 
 EditNetRelationsTaskHandler_0=Loading map...
-ChooseZmlLinkFeatureViewControl_4=Type\: %s,
 EditRelationUtils_0=<none>
-ChooseZmlLinkFeatureViewControl_3=Station\: %s,
+ChooseZmlLinkFeatureViewControl_3=%s,
 ChooseZmlLinkFeatureViewControl_2=<empty>
 ChooseZmlLinkFeatureViewControl_1=Can't resolve stations.gml
 ChooseZmlLinkFeatureViewControl_0=Error
