--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -286,12 +286,11 @@ KalypsoNAProjectWizard.CatchmentPageTitle=Teilgebiete importieren
 ChooseTimeseriesDialog_1=Suche
 ChooseTimeseriesDialog_0=W\u00E4hle Zeitreihe
 TextSearchFilterControl_0=Suchtext
-ChooseZmlLinkFeatureViewControl_6=Bemerkung\: %s
-ChooseZmlLinkFeatureViewControl_5=Zeitschritt\: %s,
+ChooseZmlLinkFeatureViewControl_6=%s
+ChooseZmlLinkFeatureViewControl_5=%s, 
 EditNetRelationsTaskHandler_0=Lade Karte...
-ChooseZmlLinkFeatureViewControl_4=Typ\: %s,
 EditRelationUtils_0=<keine>
-ChooseZmlLinkFeatureViewControl_3=Station\: %s,
+ChooseZmlLinkFeatureViewControl_3=%s, 
 ChooseZmlLinkFeatureViewControl_2=<leer>
 ChooseZmlLinkFeatureViewControl_1=Konnte 'stations.gml' nicht finden
 ChooseZmlLinkFeatureViewControl_0=Error
