--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -235,7 +235,7 @@ org.kalypso.ui.rrm.wizards.importGeologyData.ImportGeologyWizardPage.11=Durchsuc
 org.kalypso.ui.rrm.wizards.importGeologyData.ImportGeologyWizardPage.10=Fehler beim Laden der Shapedatei. Die Datei ist m\u00F6glicherweise besch\u00E4digt, oder es fehlen dbf/shx Informationen.
 CatchmentModelBuilder_1=Konvertiere Einzugsgebietmodell '%s' aus vorhandenen Zeitreihen-Referenzen
 DeleteStationAction_5=L\u00F6sche Station '%s'? Diese Aktionen kann nicht r\u00FCckg\u00E4ngig gemacht werden\!
-CatchmentModelBuilder_0=Erzeugt durch Projektkonvertierer
+CatchmentModelBuilder_0=Erzeugt durch Altprojektimport
 DeleteStationAction_4=L\u00F6sche gew\u00E4hlte Station(en)? Aktion kann nicht r\u00FCckg\u00E4ngig gemacht werden.
 KalypsoNAProjectPreferences.SoilGroupText=Teilgebiete / Bodenhorizonte
 DeleteStationAction_3=Fehler beim L\u00F6schen der Station(en)
