--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -113,12 +113,13 @@ UpdateSimulationWorker.2=Climate
 BasicModelConverter.12=Timeseries links have been updated.
 UpdateSimulationWorker.1=Inflow
 UpdateSimulationWorker.0=Water level
-ImportTimeseriesOperation_8=Error in R\u00FCckspr\u00FCng detection.
-ImportTimeseriesOperation_7=No R\u00FCckspr\u00FCng detected.
-ImportTimeseriesOperation_6=R\u00FCckspr\u00FCng detected.
-ImportTimeseriesOperation_5=Error in time step validity detection.
-ImportTimeseriesOperation_4=Import Timeseries Operation
-ImportTimeseriesOperation_3=Import Timeseries Operation failed - Invalid time steps detected.
+ImportTimeseriesOperation_9=Error in R\u00FCcksprung detection.
+ImportTimeseriesOperation_8=No R\u00FCcksprung detected.
+ImportTimeseriesOperation_7=R\u00FCcksprung detected.
+ImportTimeseriesOperation_6=Error in time step validity detection.
+ImportTimeseriesOperation_5=Import Timeseries Operation
+ImportTimeseriesOperation_4=Import Timeseries Operation failed - Invalid time steps detected.
+ImportTimeseriesOperation_3=Import Timeseries Operation failed - Couldn't resolve timestamp of timeseries.
 ImportTimeseriesOperation_2=Import Timeseries Operation failed - Couldn't resolve time step of timeseries.
 ImportTimeseriesOperation_1=Import Timeseries Operation failed - A "R\u00FCcksprung" was detected.
 ImportTimeseriesOperation_0=Import Timeseries Operation failed - Error reading input timeseries
