--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -113,12 +113,13 @@ UpdateSimulationWorker.2=Klima
 BasicModelConverter.12=Zeitreihenverweise wurden aktualisiert.
 UpdateSimulationWorker.1=Zufluss
 UpdateSimulationWorker.0=Pegel
-ImportTimeseriesOperation_8=Fehler in R\u00FCcksprung-Detektion
-ImportTimeseriesOperation_7=Keine R\u00FCckspr\u00FCnge wurden festgellt.
-ImportTimeseriesOperation_6=R\u00FCcksprung wurde festgestellt.
-ImportTimeseriesOperation_5=Fehler bei \u00DCberpr\u00FCfung des Zeitschritts.
-ImportTimeseriesOperation_4=Importiere Zeitreihe Verarbeitung
-ImportTimeseriesOperation_3=Importiere Zeitreihe Verarbeitung fehlgeschlagen \u2013 Fehlerhafter Zeitschritt.
+ImportTimeseriesOperation_9=Fehler in R\u00FCcksprung-Detektion
+ImportTimeseriesOperation_8=Keine R\u00FCckspr\u00FCnge wurden festgellt.
+ImportTimeseriesOperation_7=R\u00FCcksprung wurde festgestellt.
+ImportTimeseriesOperation_6=Fehler bei \u00DCberpr\u00FCfung des Zeitschritts.
+ImportTimeseriesOperation_5=Importiere Zeitreihe Verarbeitung
+ImportTimeseriesOperation_4=Importiere Zeitreihe Verarbeitung fehlgeschlagen \u2013 Fehlerhafter Zeitschritt.
+ImportTimeseriesOperation_3=Importiere Zeitreihe Verarbeitung fehlgeschlagen \u2013 Bestimmung des Zeitstempels nicht m\u00F6glich.
 ImportTimeseriesOperation_2=Importiere Zeitreihe Verarbeitung fehlgeschlagen \u2013 Bestimmung des Zeitschritts nicht m\u00F6glich.
 ImportTimeseriesOperation_1=Importiere Zeitreihe Verarbeitung fehlgeschlagen \u2013 R\u00FCcksprung wurde festgestellt.
 ImportTimeseriesOperation_0=Importiere Zeitreihe Verarbeitung fehlgeschlagen \u2013 Fehler beim Einlesen der Eingangsdaten.
