--- a/trunk/KalypsoModelRCM/etc/schema/rainfallCatchmentModel_v2_de.properties
+++ b/trunk/KalypsoModelRCM/etc/schema/rainfallCatchmentModel_v2_de.properties
@@ -2,6 +2,6 @@
 org.kalypso.model.rcm.v2=rcm
 rcm=org.kalypso.model.rcm.v2
 
-rcm_RainfallGenerator_rcm_validFrom_label=Valid From
-rcm_RainfallGenerator_rcm_validTo_label=Valid To
+rcm_RainfallGenerator_rcm_validFrom_label=Gültig von
+rcm_RainfallGenerator_rcm_validTo_label=Gültig bis
 rcm_RainfallGenerator_rcm_parameterType_label=Parameter Type
