--- a/trunk/KalypsoModelRCM/etc/schema/catchmentModel_de.properties
+++ b/trunk/KalypsoModelRCM/etc/schema/catchmentModel_de.properties
@@ -5,5 +5,5 @@ cm=org.kalypso.model.cm
 cm_LinearSumGenerator_label=${property:http://www.opengis.net/gml#description} (${property:org.kalypso.model.rcm.v2#parameterType})
 cm_LinearSumGenerator_cm_comment_label=Kommentar
 cm_LinearSumGenerator_cm_timestep_label=Zeitschritt [min]
-cm_LinearSumGenerator_cm_timestamp_label=Zeitstempel [hh:mm.Z] (nur Tagewerte)
+cm_LinearSumGenerator_cm_timestamp_label=Zeitstempel [hh:mm] (nur Tagewerte)
 
